# h2hx_py

./: .gitignore  README.md  pyproject.toml
src/h2hx_py/: __init__.py  cli.py  converter.py  model.py  parser.py  writer.py
tests/: test_conversion.py
