[project]
name = "h2hx-py"
version = "0.1.0"
description = "Python converter for transforming .hwp files into .hwpx packages"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "lxml>=5.3.0",
    "olefile>=0.47",
    "pyhwp==0.1b15",
    "six>=1.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
h2hx = "h2hx_py.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/h2hx_py"]
